--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/wall1.JPG);">
+				   	<li style="background-image: url(images/wall2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -148,7 +148,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Graphic Design</h3>
+										<h3>Blogging</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
@@ -227,7 +227,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center animate-box">
+						<!--<div class="col-md-4 text-center animate-box">
 							<div class="services color-4">
 								<span class="icon">
 									<i class="icon-layers2"></i>
@@ -237,8 +237,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
+						</div>-->
+						<!--<div class="col-md-4 text-center animate-box">
 							<div class="services color-5">
 								<span class="icon">
 									<i class="icon-data"></i>
@@ -248,8 +248,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
+						</div>-->
+						<!--<div class="col-md-4 text-center animate-box">
 							<div class="services color-6">
 								<span class="icon">
 									<i class="icon-phone3"></i>
@@ -259,7 +259,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</section>
@@ -304,7 +304,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Photoshop</h3>
+								<h3>Blog</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -469,7 +469,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>-->
 
-			<section class="colorlib-experience" data-section="experience">
+		<!--	<section class="colorlib-experience" data-section="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -553,7 +553,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   </div>
 				   </div>
 				</div>
-			</section>
+			</section>-->
 
 			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
