--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/profile3.JPG);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Kandeepan Yathuraj</a></h1>
-				<span class="position"><a href="#">Web Developer</a> </span>
+				<span class="position"><a href="#">Student</a> </span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -308,7 +308,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -357,6 +357,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
+<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>NodeJS</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>75%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>MongoDB</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								    <span>80%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>JSON</h3>
@@ -368,7 +390,33 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
+<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Express</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>65%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>ReactJS</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+								    <span>80%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+
+
 					</div>
+
+
 				</div>
 			</section>
 
@@ -565,7 +613,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Fun Works</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<p class="work-menu"><span><a href="#" class="active"> Works</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
 						</div>
 					</div>
 					<div class="row">
@@ -583,28 +631,31 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									</div>
 								</div>
 							</div>
-						</div><!--
+
+						</div>
+
+
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/tic.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
+										<h3><a href="https://uki5funwork3byyathu.herokuapp.com/">Fun Work 02</a></h3>
+										<span>Tic Tac Toe-ReactJS Game App</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="#"><i class="icon-eye"></i> 50</a></span>
+											<span><a href="#"><i class="icon-heart"></i> 40</a></span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/ceylon.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
-										<span>Illustration</span>
+										<h3><a href="https://ceylonrental.herokuapp.com/">Project</a></h3>
+										<span>Ceylon Rental-A room booking website for university students</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -613,7 +664,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									</div>
 								</div>
 							</div>
-						</div>
+						</div><!--
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
